# whatsapp-api

./: .gitignore  AGENTS.md  APIDOCS.md  Dockerfile  README.md  docker-compose.yaml  mcp_server.py  pyproject.toml  sync_worker.py  tailscale-serve.json
.github/workflows/: ci-cd.yml
coolify/: docker-compose.yaml
tests/: conftest.py  test_lid.py  test_routes_health.py  test_wacli.py
wacli_api/: database.py  db.py  deps.py  lid.py  main.py  models.py  redis_types.py  schemas.py  settings.py  wacli.py
wacli_api/routes/: chats.py  contacts.py  groups.py  health.py  lid.py  messages.py  send.py
